# Agentic-AI-Video-CPE-Test-Platform

./: .dockerignore  .env.example  .gitignore  CHANGES_APPLIED.md  COMPLETE_TRAINING_FIX.py  DOCKER_FIXES.md  Dockerfile  PADDLEOCR_SETUP.md  PRODUCTION_READY.md  README.md  REAL_PADDLEOCR_IMPLEMENTATION.md  REAL_TRAINING_UPDATE.md  clean_json_files.py  debug_endpoint.py  debug_imports.py  diagnose_stream.py  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  download_pretrained_models.py  finetune_model.py  init_models.py  prepare_training_data.py  pyproject.toml  requirements.txt  run_tests.py  startup.sh  test_basic.py  test_changes.txt  test_device_control.py  test_fast_models.py  test_ollama.py  test_paddle.py  test_stream.py  test_training.py  test_yolo_integration.py  verify_files.py
frontend/: Dockerfile  FIXES_SUMMARY.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  AppSimple.jsx
src/: config.py  main.py  test_mount.txt
src/agent/: ollama_client.py  vision_agent.py
src/api/: debug_endpoints.py  main.py  yolo_import_helper.py
src/capture/: frame_processor.py  http_video_capture.py  video_capture.py
src/control/: device_controller.py  key_commands.py  test_orchestrator.py
src/models/: dataset_converter.py  paddleocr_trainer.py  yolo_inference.py  yolo_trainer.py
src/utils/: image_augmentation.py  logger.py  stream_diagnostics.py  stream_tester.py
tests/: conftest.py
tests/features/: basic_navigation.feature  netflix_launch.feature  power_control.feature
tests/step_definitions/: test_netflix_launch.py
(+15 files in other folders)
